--- a/src/app/(home)/HomePage.module.css
+++ b/src/app/(home)/HomePage.module.css
@@ -1,12 +1,6 @@
-.main {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: stretch;
-  padding: 6rem;
+.mainPaper {
+  padding: 10px;
 }
-
 /* .description { */
 /*   display: inherit; */
 /*   justify-content: inherit; */
